@@ -731,6 +731,7 @@
 <li>Store-Facility-List-Extended Facility</li>
 <li>ETF2-Enhancement Facility</li>
 <li>ETF3-Enhancement Facility</li>
+<li>PER-3 Facility</li>
 </ul>
 
 <P>The following standard feature has not yet been implemented: </P>
@@ -868,7 +869,7 @@ Please see our <a href="hercsupp.html">Technical Support</a> web page.
 
 <P>
 <small>
-Last updated 24 Oct 2005
+Last updated 02 Nov 2005
 </small>
 </center>
 </P>
