@@ -1,5 +1,6 @@
 
 ####   Don't forget to change the version number in configure.ac!   ####
+02 Nov 2005 Activate FEATURE_PER3 - Roger Bowler
 02 Nov 2005 PER3 instruction-fetching nullification - Roger Bowler
 01 Nov 2005 hercules no longer depends on libgcrypt - Ivan Warren
 01 Nov 2005 Reinstate libhercu/t/d as shlibs/dlls - Ivan Warren
